--- a/css/style.css
+++ b/css/style.css
@@ -49,8 +49,7 @@ a:visited {
 	margin: 10px 0;
 }
 #nav {
-	text-align: right;
-	margin: 30px 0 0 0;
+	margin: 30px  0 ;
 }
 .navigation{
 	float: right;
@@ -318,7 +317,3 @@ a:visited {
 
 
 }
-
-
-
-
