--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ a:visited {
 
 #slide2{
 	background-image:url('../images/footprints.png');
-	background-color:#f68f67;
+	background-color:#00000;
 	color:#ffffff;
 }
 #slide2 h1 {
