--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ a:visited {
 /* Slide 2 */ 
 
 #slide2{
-	background-image:url('../images/footprints.png');
+	background-image:url('../images/architect.jpg');
 	background-color:#00000;
 	color:#ffffff;
 }
