--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,7 @@ a:visited {
 /* Slide 4 */
 
 #slide4{
-	background-image:url('../images/sunglasses.png');
+	background-image:url('../images/lowpoly.jpg');
 	background-color:#8a8683;
 	color:#ffffff;
 }
