--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,27 @@
+html, body {
+  overflow-x: hidden;
+  font-family: "M PLUS 1p";
+  background-color: #ffffff;
+  font-size: 12px;
+  max-width: 100%;
+}
+
+img, p, span, a, div {
+  /* disable selection */
+  -khtml-user-select: none;
+  -o-user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+
+  /* disable drag */
+  -khtml-user-drag: none;
+  -webkit-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+   user-drag: none;
+}
+
 .box {
   position: fixed;
   top: 50%;
@@ -25,10 +49,9 @@
 }
 
 .left {
-  padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
   width: 65%;
-  height: 340px;
-  background-color: #ddd;
 }
 
 .right {
@@ -46,11 +69,16 @@
   border-radius: 20px;=
 }
 
+.icon img:hover {
+  -ms-transform: rotate(5deg);
+  -webkit-transform: rotate(5deg);
+  transform: rotate(5deg);
+}
+
 .links {
   margin: auto;
   display: flex;
-  width: 60px;
-  direction: column;
+  width: 120px;
   flex-wrap: wrap;
   justify-content: center;
   padding: 20px;
@@ -64,13 +92,21 @@
   border-radius: 50%
 }
 
+.links img:hover {
+  -ms-transform: rotate(20deg);
+  -webkit-transform: rotate(20deg);
+  transform: rotate(20deg);
+}
+
 .grid {
-  margin: auto;
+  padding: 10px;
   width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
+  background-color: #ddd;
+  border-radius: 20px;
 }
 
 .item {
@@ -80,8 +116,20 @@
   background-color: #fff;
 }
 
+.item:hover img {
+  -ms-transform: translate(0, -2px);
+  -webkit-transform: translate(0, -2px);
+  transform: translate(0, -2px);
+}
+
 .bar {
   height: 20px;
   width: 100%;
   background-color: #fff;
+}
+
+.slot {
+  margin: 20px;
+  height: 300px;
+  width: 100%;
 }
