--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ img, p, span, a, div {
   margin: 20px;
   height: 100px;
   width: 100px;
-  background-color: #fff;
+  z-index: 1;
 }
 
 .item:hover img {
@@ -123,13 +123,40 @@ img, p, span, a, div {
 }
 
 .bar {
-  height: 20px;
+  margin-top: -25px;
+  height: 50px;
   width: 100%;
   background-color: #fff;
+  z-index: 0;
+}
+
+.card {
+  margin: 20px;
+  height: 300px;
+  width: 100%;
 }
 
 .slot {
   margin: 20px;
-  height: 300px;
-  width: 100%;
+  padding: 5px;
+  background-color: #999;
+  color: #fff;
+}
+
+.button {
+  margin: auto;
+  height: 10px;
+  width: 10px;
+  background-color: #000;
+  border-radius: 50%;
+}
+
+.item:hover .button {
+    background-color: #bbb;
+}
+
+.label {
+  margin: 10px;
+  background-color: #bbb;
+  color: #fff;
 }
