--- a/css/style.css
+++ b/css/style.css
@@ -124,3 +124,19 @@ img, p, span, a, div {
 .item:hover .button {
     background-color: #bbb;
 }
+
+.out {
+  margin-top: 55px;
+  color: #fff;
+  text-align: center;
+  font-weight: bold;
+  letter-spacing: .2rem;
+}
+
+footer {
+  position: absolute;
+  bottom: -25px;
+  width: 100%;
+  text-align: center;
+  color: #95b4f2;
+}
