--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,17 @@ img, p, span, a, div {
   cursor: pointer;
 }
 
+.prints {
+   content: url('../images/items/prints.png');
+}
+.prints:hover {
+   content: url('../images/items/prints.png');
+  -ms-transform: translate(0, -6px);
+  -webkit-transform: translate(0, -6px);
+  transform: translate(0, -6px);
+  transition: all 0.2s ease;
+} 
+
 .shop {
    content: url('../images/items/shop1.png');
 }
